<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<maven.compiler.source>16</maven.compiler.source>
		<maven.compiler.target>16</maven.compiler.target>
	</properties>
	<modelVersion>4.0.0</modelVersion>
	<groupId>tokyo.nakanaka</groupId>
	<artifactId>ShapeGenerator</artifactId>
	<version>0.1.0</version>
	<repositories>
      <repository>
        <id>local-maven-repo</id>
        <url>file:///${project.parent.basedir}/local-maven-repo</url>
      </repository>
    </repositories>
   	<dependencies>
    	<dependency>
    		<groupId>org.spigotmc</groupId>
    		<artifactId>spigot-api</artifactId>
   			<version>1.16.5-R0.1-SNAPSHOT</version><!--change this value depending on the version or use LATEST-->
   			<type>jar</type>
           	<scope>provided</scope>
		</dependency>
		<dependency>
  		  	<groupId>org.apache.commons</groupId>
    		<artifactId>commons-math3</artifactId>
    		<version>3.6.1</version>
		</dependency>
		<dependency>
  		  	<groupId>tokyo.nakanaka</groupId>
    		<artifactId>NakanakaCommons</artifactId>
    		<version>1.3.0</version>
		</dependency>
	</dependencies>
  <build>
    <plugins>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-shade-plugin</artifactId>
        <version>3.2.4</version>
        <executions>
          <execution>
            <phase>package</phase>
            <goals>
              <goal>shade</goal>
            </goals>
          </execution>
        </executions>
      </plugin>
    </plugins>
  </build>
</project>